[metadata]
# replace with your username:
name = example-pkg-david
version = 0.0.2
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.6
